// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IvsPlayer should render archiving page 1`] = `
<DocumentFragment>
  <div
    class="styled__Container-sc-86hpyq-0 cDXyjC"
  >
    <div
      class="styled__IvsPlayerContainer-sc-1l56t7n-0 htNCDq"
    >
      <div>
        <div
          class="styled__OverLayContainer-sc-1l56t7n-2 epEMVS"
        >
          <div
            class="styled__TextContainer-sc-1l56t7n-5 ctYScI"
          >
            <p>
              アーカイブ中です。
            </p>
            <p>
              完了までお待ちください。
            </p>
          </div>
        </div>
      </div>
      <video
        autoplay=""
        class="styled__IvsPlayerVideo-sc-1l56t7n-1 fgKZHq video-js vjs-16-9 vjs-big-play-centered"
        controls=""
        playsinline=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`IvsPlayer should render not selected page 1`] = `
<DocumentFragment>
  <div
    class="styled__Container-sc-86hpyq-0 cDXyjC"
  >
    <div
      class="styled__IvsPlayerContainer-sc-1l56t7n-0 htNCDq"
    >
      <div>
        <div
          class="styled__OverLayContainer-sc-1l56t7n-2 epEMVS"
        >
          <div
            class="styled__TextContainer-sc-1l56t7n-5 ctYScI"
          >
            <p>
              セッションが選択されていません。
            </p>
          </div>
        </div>
      </div>
      <video
        autoplay=""
        class="styled__IvsPlayerVideo-sc-1l56t7n-1 fgKZHq video-js vjs-16-9 vjs-big-play-centered"
        controls=""
        playsinline=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`IvsPlayer should render preparing page 1`] = `
<DocumentFragment>
  <div
    class="styled__Container-sc-86hpyq-0 cDXyjC"
  >
    <div
      class="styled__IvsPlayerContainer-sc-1l56t7n-0 htNCDq"
    >
      <div>
        <div
          class="styled__OverLayContainer-sc-1l56t7n-2 epEMVS"
        >
          <div
            class="styled__TextContainer-sc-1l56t7n-5 ctYScI"
          >
            <p>
              配信準備中です。
            </p>
            <p>
              しばらくお待ちください。
            </p>
          </div>
        </div>
      </div>
      <video
        autoplay=""
        class="styled__IvsPlayerVideo-sc-1l56t7n-1 fgKZHq video-js vjs-16-9 vjs-big-play-centered"
        controls=""
        playsinline=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`IvsPlayer should render video player when archived 1`] = `
<DocumentFragment>
  <div
    class="styled__Container-sc-86hpyq-0 cDXyjC"
  >
    <div
      class="styled__IvsPlayerContainer-sc-1l56t7n-0 htNCDq"
    >
      <div />
      <video
        autoplay=""
        class="styled__IvsPlayerVideo-sc-1l56t7n-1 fgKZHq video-js vjs-16-9 vjs-big-play-centered"
        controls=""
        playsinline=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`IvsPlayer should render video player when onAir 1`] = `
<DocumentFragment>
  <div
    class="styled__Container-sc-86hpyq-0 cDXyjC"
  >
    <div
      class="styled__IvsPlayerContainer-sc-1l56t7n-0 htNCDq"
    >
      <div />
      <video
        autoplay=""
        class="styled__IvsPlayerVideo-sc-1l56t7n-1 fgKZHq video-js vjs-16-9 vjs-big-play-centered"
        controls=""
        playsinline=""
      />
    </div>
  </div>
</DocumentFragment>
`;
